--- a/babyshop/detail/templates/detail/details.html
+++ b/babyshop/detail/templates/detail/details.html
@@ -258,10 +258,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<!-- end product_slider -->
 				     </div>
 				   <div class="desc span_3_of_2">
-					<h2>Whirlpool LTE5243D 3.4 CuFt.... </h2>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>					
+					<h2>{{ goodie.name }}</h2>
+					<p>{{ goodie.description }}</p>
 					<div class="price">
-						<p>Price: <span>$839.93</span></p>
+						<p>Цена: <span>{{ goodie.price }}</span></p>
 					</div>
 					<div class="available">
 						<ul>
@@ -272,9 +272,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				<div class="share-desc">
 					<div class="share">
-						<p>Number of units :</p><input type="number" class="text_box" type="text" value="1" min="1" />				
+						<p>Number of units :</p><input type="number" class="text_box" type="text" value="1" min="1" />
 					</div>
-					<div class="button"><span><a href="#">Add to Cart</a></span></div>					
+					<div class="button"><span><a href="#">Добавить в корзину</a></span></div>
 					<div class="clear"></div>
 				</div>
 <!--!! Wishlist and compare
