Removed 'Product details' block from detail product page

--- a/babyshop/detail/templates/detail/details.html
+++ b/babyshop/detail/templates/detail/details.html
@@ -314,6 +314,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="clear"></div>
 		</div>
+<!-- Details
 		<div class="product_desc">	
 			<div id="horizontalTab">
 				<ul class="resp-tabs-list">
@@ -386,6 +387,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			  </div>
 		    </div>
 	    </div>
+-->
       </div>
 <!--!! Popular products
 				   <div class="rightsidebar span_3_of_1 sidebar">
