added image support to goodie detail page

--- a/babyshop/detail/templates/detail/details.html
+++ b/babyshop/detail/templates/detail/details.html
@@ -243,7 +243,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="grid images_3_of_2">
 						<!-- start product_slider -->
 						{% if goodie.main_image %}
-							<img src="{% static 'images/preview-large-img1.jpg' %}" />
+							<img src="{{ goodie.main_image.url }}" />
 						{% else %}
 							<img src="http://placehold.it/500x500" />
 						{% endif %}
