--- a/babyshop/detail/templates/detail/details.html
+++ b/babyshop/detail/templates/detail/details.html
@@ -1,234 +1,8 @@
+{% extends "detail/template.html" %}
+
 {% load staticfiles %}
 
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE HTML>
-<head>
-	<title>Ecomm Template Website Template | Preview :: w3layouts</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link href='//fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
-	<link href="{% static '/static/css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
-	<script type="text/javascript" src="{% static '/static/js/jquery-1.9.0.min.js' %}"></script> 
-	<script src="{% static '/static/js/jquery.openCarousel.js' %}" type="text/javascript"></script>
-	<script type="text/javascript" src="{% static '/static/js/easing.js' %}"></script>
-	<script type="text/javascript" src="{% static '/static/js/move-top.js' %}"></script>
-	<script src="{% static '/static/js/easyResponsiveTabs.js' %}" type="text/javascript"></script>
-	<link href="{% static '/static/css/easy-responsive-tabs.css' %}" rel="stylesheet" type="text/css" media="all"/>
-	<script type="text/javascript">
-    $(document).ready(function () {
-        $('#horizontalTab').easyResponsiveTabs({
-            type: 'default', //Types: default, vertical, accordion           
-            width: 'auto', //auto or any width like 600px
-            fit: true   // 100% fit in a container
-        });
-    });
-   </script>		
-	<script src="{% static '/static/js/star-rating.js' %}" type="text/javascript"></script>
-</head>
-<body>
-	<div class="header">
-			<div class="wrap">
-				<div class="header_top">
-					<div class="logo">
-						<a href="index.html"><img src="images/logo.png" alt="" /></a>
-					</div>
-						<div class="header_top_right">
-							  <div class="search_box">
-							  	<span>Search</span>
-					     		<form>
-					     			<input type="text" value=""><input type="submit" value="">
-					     		</form>
-					     		<div class="clear"></div>
-					     	</div>
-					</div>
-			     <div class="clear"></div>
-  		    </div>     
-  		    <div class="navigation">
-  		    	<a class="toggleMenu" href="#">Menu</a>
-					<ul class="nav">
-						<li>
-							<a href="index.html">Home</a>
-						</li>
-						<li  class="test">
-							<a href="#">Appliances</a>
-							<ul>
-								<li>
-									<a href="#">Cookware</a>
-									<ul>
-										<li><a href="#">Pots & Pans</a></li>
-										<li><a href="#">Pressure Cookers</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Storage</a>
-									<ul>
-										<li><a href="#">Bottles & Sippers</a></li>
-										<li><a href="#">Containers & Jars</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Cutlery & Tableware</a>
-									<ul>
-										<li><a href="#">Cutlery</a></li>
-										<li><a href="#">Condiment Sets</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Bar Accessories</a>
-									<ul>
-										<li><a href="#">Bottle Openers</a></li>
-										<li><a href="#">Flasks</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">Computers</a>
-							<ul>
-								<li>
-									<a href="#">Laptops</a>
-									<ul>
-										<li><a href="#">HP</a></li>
-										<li><a href="#">Lenova</a></li>
-										<li><a href="#">Dell</a></li>
-										<li><a href="#">All Brands</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Computer Accessories</a>
-									<ul>
-										<li><a href="#">External Hard Disks</a></li>
-										<li><a href="#">Pendrives</a></li>
-										<li><a href="#">PC Components</a></li>
-										<li><a href="#">Computer Peripherals</a></li>
-										<li><a href="#">Datacards & Routers</a></li>
-										<li><a href="#">Mouse</a></li>
-										<li><a href="#">Laptop Skins & Decals</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">Health & Beauty</a>
-							<ul>
-								<li><a href="#">Bath & Skin Care</a></li>
-								<li><a href="#">Health & Safety</a></li>
-								<li><a href="#">Maternity Care</a></li>
-								<li><a href="#">Body Care Combos</a></li>
-								
-							</ul>
-						</li>
-						<li>
-							<a href="#">Home & Garden</a>
-							<ul>
-								<li>
-									<a href="#">Home Furnishing</a>
-									<ul>
-										<li><a href="#">Bed</a></li>
-										<li><a href="#">Bath</a></li>
-										<li><a href="#">Kitchen</a></li>
-										<li><a href="#">Living</a></li>
-										
-									</ul>
-								</li>
-								<li>
-									<a href="#">Home Decor</a>
-									<ul>
-										<li><a href="#">Flowers & Plants</a></li>
-										<li><a href="#">Home Fragrances</a></li>
-										<li><a href="#">Spiritual Decor</a></li>
-										<li><a href="#">Wall Decor</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Gardening Tools</a>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">Office Supplies</a>
-							<ul>
-								<li>
-									<a href="#">Books</a>
-									<ul>
-										<li><a href="#">Academic & Professional</a></li>
-										<li><a href="#">Entrance Exam</a></li>
-										<li><a href="#">Literature & Fiction</a></li>
-										<li><a href="#">Children & Teens</a></li>
-										<li><a href="#">Indian Writing</a></li>
-										<li><a href="#">New Releases</a></li>
-										<li><a href="#">Bestsellers</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Stationery</a>
-									<ul>
-										<li><a href="#">Pens</a></li>
-										<li><a href="#">Calculators</a></li>
-										<li><a href="#">College Supplies</a></li>
-										<li><a href="#">Art Supplies</a></li>
-										<li><a href="#">Diaries & Notebooks</a></li>
-										<li><a href="#">Gifting</a></li>
-									</ul>
-								</li>
-								
-							</ul>
-						</li>
-						<li>
-							<a href="#">Sports Equipment</a>
-							<ul>
-								<li>
-									<a href="#">Fitness</a>
-									<ul>
-										<li><a href="#">Yoga Mats</a></li>
-										<li><a href="#">Gym Gloves</a></li>
-										<li><a href="#">Ab Exercisers</a></li>
-										<li><a href="#">Gym Balls</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Indoor Sports</a>
-									<ul>
-										<li><a href="#">Chess</a></li>
-										<li><a href="#">Darts</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Team Sports</a>
-									<ul>
-										<li><a href="#">Basketball</a></li>
-										<li><a href="#">Cricket</a></li>
-										<li><a href="#">Football</a></li>
-										<li><a href="#">VolleyBall</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Racquet Sports</a>
-									<ul>
-										<li><a href="#">Badminton</a></li>
-										<li><a href="#">Squash</a></li>
-										<li><a href="#">Table Tennis</a></li>
-										<li><a href="#">Tennis</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="contact.html">Contact Us</a>
-						</li>
-					</ul>
-					 <span class="left-ribbon"> </span> 
-      				 <span class="right-ribbon"> </span>    
-  		       </div>
-   		    </div>
-          </div>
-	<!------------End Header ------------>
-	<div class="main">
+{% block main_content %}
 		<div class="wrap">
 			<div class="preview-page">
 				<div class="section group">
@@ -515,45 +289,4 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					   </div>    		
 				   </div>
 				   -->
-	</div>        
-	<div class="footer">
-		<div class="wrap">	
-			<div class="copy_right">
-				<p>Copyright &copy; 2014 Ecomm .All rights reserved .Design by <a href="http://w3layouts.com/" target="_blank">W3layouts</a></p>
-			</div>	
-			<div class="footer-nav">
-				<ul>
-					<li><a href="#">Terms of Use</a> : </li>
-					<li><a href="#">Privacy Policy</a> : </li>
-					<li><a href="contact.html">Contact Us</a> : </li>
-					<li><a href="#">Sitemap</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			$().UItoTop({ easingType: 'easeOutQuart' });
-			
-			});
-	</script>
-	<a href="#" id="toTop"> </a>
-	<script type="text/javascript" src="{% static 'js/navigation.js' %}"></script>
-	<!-- FlexSlider -->
-	<!--!! Image zoomer
-	<script src="js/imagezoom.js"></script>
-	-->
-	<script defer src="{% static 'js/jquery.flexslider.js' %}"></script>
-	<link rel="stylesheet" href="{% static 'css/flexslider.css' %}" type="text/css" media="screen" /> 
-	<script>
-	// Can also be used with $(document).ready()
-	$(window).load(function() {
-	  $('.flexslider').flexslider({
-		animation: "slide",
-		controlNav: "thumbnails"
-	  });
-	});
-	</script>                    
-</body>
-</html>
-
+	{% endblock %}
