--- a/babyshop/main/templates/main/index.html
+++ b/babyshop/main/templates/main/index.html
@@ -1,4 +1,4 @@
-{% extends "detail/template.html" %}
+{% extends "main/template.html" %}
 
 {% load staticfiles %}
 
@@ -77,34 +77,22 @@
 					<div class="content-bottom-right">
 						<h3>Browse All Categories</h3>
 						<div class="section group">
+							{% for goodie in goodies %}
 							<!-- Product 1 -->
 							<div class="grid_1_of_4 images_1_of_4">
-								<h4><a href="preview.html">Whirlpool LTE5243D 3.4 CuFt.... </a></h4>
-								<a href="preview.html"><img src="images/product-img1.jpg" alt="" /></a>
+								<h4><a href="{% url 'details' goodie.pk %}">{{ goodie.name }}</a></h4>
+								<a href="{% url 'details' goodie.pk %}"><img src="{{ goodie.main_image.url }}" alt="" /></a>
 								<div class="price-details">
 									<div class="price-number">
-										<p><span class="rupees">$839.93 </span></p>
+										<p><span class="rupees">{{ goodie.price }}</span></p>
 									</div>
 									<div class="add-cart">								
-										<h4><a href="preview.html">More Info</a></h4>
+										<h4><a href="{% url 'details' goodie.pk %}">Подробнее</a></h4>
 									</div>
 									<div class="clear"></div>
 								</div>
 							</div>
-							<!-- Product 2 -->
-							<div class="grid_1_of_4 images_1_of_4">
-								<h4><a href="preview.html">Whirlpool LTE5243D 3.4 CuFt.... </a></h4>
-								<a href="preview.html"><img src="images/product-img2.jpg" alt="" /></a>
-								<div class="price-details">
-									<div class="price-number">
-										<p><span class="rupees">$839.93 </span></p>
-									</div>
-									<div class="add-cart">								
-										<h4><a href="preview.html">More Info</a></h4>
-									</div>
-									<div class="clear"></div>
-								</div>
-							</div>
+						{% endfor %}
 						</div>
 						<div class="product-articles">
 							<h3>Browse All Categories</h3>
