--- a/babyshop/main/templates/main/template.html
+++ b/babyshop/main/templates/main/template.html
@@ -35,7 +35,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="wrap">
 				<div class="header_top">
 					<div class="logo">
-						<a href="index.html"><img src="images/logo.png" alt="" /></a>
+						<!-- !! logo -->
+						<a href="{% url 'index' %}"><img src="images/logo.png" alt="" /></a>
 					</div>
 						<div class="header_top_right">
 							  <div class="search_box">
@@ -52,7 +53,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   		    	<a class="toggleMenu" href="#">Menu</a>
 					<ul class="nav">
 						<li>
-							<a href="index.html">Home</a>
+							<a href="{% url 'index' %}">Home</a>
 						</li>
 						<li  class="test">
 							<a href="#">Appliances</a>
