--- a/babyshop/main/templates/main/template.html
+++ b/babyshop/main/templates/main/template.html
@@ -53,7 +53,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   		    	<a class="toggleMenu" href="#">Menu</a>
 					<ul class="nav">
 						<li>
-							<a href="{% url 'index' %}">Home</a>
+							<a href="{% url 'index' %}">На главную</a>
 						</li>
 						<li  class="test">
 							<a href="#">Appliances</a>
